--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
       <h1>SIMPLE SOLUTION CONSULTING GROUP</h1>
       <nav>
         <ul>
-          <li><a href="/">INICIO</a></li>
           <li><a href="#servicios">Servicios</a></li>
           <li><a href="#testimonios">Testimonios</a></li>
           <li><a href="#formulario">Contactos</a></li>
         </ul>
       </nav>
-      <div class="hidden"></div>
-      <div class="marco">
-        <img src="resources/img/header.jpg" alt="encabezado" />
+      <div>
+        <span></span>
+        <div class="marco">
+          <img src="resources/img/header.jpg" alt="encabezado" />
+        </div>
       </div>
     </header>
     <main>
@@ -39,9 +40,12 @@
             <div class="cardContainer">
               <h4><b>Servicio Basico</b></h4>
               <p>
-                Servicio de consultoria Basico para su empresa donde lo estara
-                visitando uno de nuestros profesionales al cual Ud. debera
-                explicarle la necesitdad de negocio que quiere mejorar.
+                Servicio de consultoria Basico para su empresa, este es nuestra
+                mas basica implementacion de mejoras, lo estara visitando uno de
+                nuestros profesionales al cual Ud. deberá explicarle la
+                necesidad de negocio que quiere aplciar en su compañia, recuerde
+                que nuestra meta es el exito y mejoras de los procesos
+                tecnologicos.
               </p>
             </div>
           </div>
@@ -49,10 +53,10 @@
             <div class="cardContainer">
               <h4><b>Servicio Basico+</b></h4>
               <p>
-                Servicio de consultoria para su empresa Basico++ para su empresa
-                donde lo estara visitando uno de nuestros profesionales al cual
-                Ud. debera explicarle la necesidad de negocio que quiere
-                mejorar, incluye reuniones semanales para medir el avance.
+                Servicio de consultoria para su empresa Basico+ Incluye todo lo
+                del basico ademas incluye reuniones semanales para medir el
+                avance del proyecto asi como las mejoras en las que se ha
+                querido enfocar el servicio.
               </p>
             </div>
           </div>
@@ -60,10 +64,11 @@
             <div class="cardContainer">
               <h4><b>Servicio Premium</b></h4>
               <p>
-                Servicio de consultoria para su empresa Premium para su empresa
-                donde lo estara visitando 3 de nuestros profesionales los cuales
-                desarrollaran una propuesta de negocio de lo que se quiere
-                mejorar, incluye reuniones interdiarias para medir el avance.
+                Servicio de consultoria para su empresa Premium incluye Basico+
+                adicional se desarrollará una propuesta de negocio de lo que se
+                quiere mejorar, incluye reuniones interdiarias para medir el
+                avance del proyecto y mejoras logradas, un recurso estara
+                fisicamente en su empresa.
               </p>
             </div>
           </div>
@@ -71,17 +76,18 @@
             <div class="cardContainer">
               <h4><b>Servicio Premium+</b></h4>
               <p>
-                Servicio de consultoria para su empresa Premium+ para su empresa
-                donde lo estara visitando 3 de nuestros profesionales, 1
-                arquitecto de software 1 database administrator los cuales
-                desarrollaran una propuesta de negocio de lo que se quiere
-                mejorar, incluye presecialidad diaria de los recursos hasta
-                finalizar el proyecto.
+                Servicio de consultoria Premium+ donde lo estara visitando 3 de
+                nuestros profesionales, 1 arquitecto de software 1 DBA los
+                cuales desarrollaran una propuesta de negocio de lo que se
+                quiere mejorar, incluye presencialidad diaria de los recursos
+                hasta finalizar el proyecto, la idea es que nuestro equipo se
+                integre con la empresa para mejorar resultados.
               </p>
             </div>
           </div>
         </div>
       </section>
+      <span></span>
       <h2 id="testimonios">Testimonios</h2>
       <section class="containerGrid">
         <article class="item item-1">
@@ -191,7 +197,7 @@
               <textarea
                 name="txtMensaje"
                 id="txtMensaje"
-                rows="2"
+                rows="1"
                 placeholder="Mensaje..."
               ></textarea>
               <input id="enviar" type="submit" value="ENVIAR" />
@@ -201,8 +207,8 @@
       </div>
     </main>
     <footer class="animacion">
-      <p class="pie">Pagina del proyecto V1.0 2024</p>
-      <a href="#inicio" class="top">ir al inicio</a>
+      <p class="pie">Entrega Proyecto V.1 2024</p>
+      <a href="#inicio" class="top">inicio</a>
       <ul class="redessociales">
         <li>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
