--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="itemFlex item-2">
           <h2>Contáctanos</h2>
           <fieldset>
-            <form action="" method="GET">
+            <form action="https://formspree.io/f/mvgoraek" method="POST">
               <label for="txtNombre">Nombre</label>
               <input type="text" name="txtNombre" id="txtNombre" required />
               <label for="txtApellido">Apellido</label>
