--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="/JS/script.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Audiowide"
@@ -24,6 +25,12 @@
           <li><a href="#testimonios">Testimonios</a></li>
           <li><a href="#formulario">Contactos</a></li>
         </ul>
+        <div id="Divcarrito">
+          <a href="blank"
+            ><img src="resources/img/carrito2.jfif" width="50px" alt="carrito"
+          /></a>
+          <button type="button" onclick="gotoModal()">Ir al carrito</button>
+        </div>
       </nav>
       <div>
         <span></span>
@@ -35,135 +42,11 @@
     <main>
       <h2 id="servicios">Servicios</h2>
       <section>
-        <div class="seccionesFlex">
-          <div class="card">
-            <div class="cardContainer">
-              <h4><b>Servicio Basico</b></h4>
-              <p>
-                Servicio de consultoria Basico para su empresa, este es nuestra
-                mas basica implementacion de mejoras, lo estara visitando uno de
-                nuestros profesionales al cual Ud. deberá explicarle la
-                necesidad de negocio que quiere aplciar en su compañia, recuerde
-                que nuestra meta es el exito y mejoras de los procesos
-                tecnologicos.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="cardContainer">
-              <h4><b>Servicio Basico+</b></h4>
-              <p>
-                Servicio de consultoria para su empresa Basico+ Incluye todo lo
-                del basico ademas incluye reuniones semanales para medir el
-                avance del proyecto asi como las mejoras en las que se ha
-                querido enfocar el servicio.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="cardContainer">
-              <h4><b>Servicio Premium</b></h4>
-              <p>
-                Servicio de consultoria para su empresa Premium incluye Basico+
-                adicional se desarrollará una propuesta de negocio de lo que se
-                quiere mejorar, incluye reuniones interdiarias para medir el
-                avance del proyecto y mejoras logradas, un recurso estara
-                fisicamente en su empresa.
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="cardContainer">
-              <h4><b>Servicio Premium+</b></h4>
-              <p>
-                Servicio de consultoria Premium+ donde lo estara visitando 3 de
-                nuestros profesionales, 1 arquitecto de software 1 DBA los
-                cuales desarrollaran una propuesta de negocio de lo que se
-                quiere mejorar, incluye presencialidad diaria de los recursos
-                hasta finalizar el proyecto, la idea es que nuestro equipo se
-                integre con la empresa para mejorar resultados.
-              </p>
-            </div>
-          </div>
-        </div>
+        <div class="seccionesFlex"></div>
       </section>
       <span></span>
       <h2 id="testimonios">Testimonios</h2>
-      <section class="containerGrid">
-        <article class="item item-1">
-          <img src="/resources/img/consultor1.jfif" alt="cons1" />
-          <p>Carla Sepulveda.</p>
-        </article>
-        <article class="item item-2">
-          <p>
-            "Desde que comenzamos a trabajar con la consultoría de SIMPLE
-            SOLUTION CONSULTING GROUP, la transformación en nuestra empresa de
-            servicios de limpieza ha sido notable. Gracias a su análisis
-            exhaustivo y a las estrategias personalizadas que nos ofrecieron,
-            hemos logrado optimizar nuestros procesos operativos, lo que se ha
-            traducido en una reducción del 20% en costos y una mejora
-            significativa en la satisfacción de nuestros clientes. Su equipo de
-            expertos nos guió en la implementación de tecnologías que han
-            agilizado nuestro servicio, y su apoyo constante nos ha brindado
-            confianza para afrontar nuevos desafíos. Sin duda, ha sido una
-            inversión valiosa que ha elevado nuestro estándar de calidad."
-          </p>
-        </article>
-        <article class="item item-3">
-          <img src="/resources/img/consultor2.jfif" alt="cons2" />
-          <p>Josheph Smith.</p>
-        </article>
-        <article class="item item-4">
-          "Contratar los servicios de consultoría de SIMPLE SOLUTION CONSULTING
-          GROUP ha sido un parteaguas para nuestra empresa de contabilidad.
-          Desde el primer día, su equipo se dedicó a comprender nuestras
-          necesidades específicas y nos proporcionó estrategias efectivas para
-          mejorar la gestión de nuestros recursos. Gracias a sus
-          recomendaciones, hemos optimizado nuestros procesos internos, lo que
-          ha resultado en una reducción del 30% en los tiempos de entrega de
-          informes y una mayor precisión en nuestras declaraciones fiscales. La
-          capacitación que nos brindaron ha empoderado a nuestro personal, y
-          ahora nos sentimos más seguros y preparados para enfrentar nuevos
-          retos en el ámbito contable. Sin duda, su apoyo ha sido clave para
-          nuestro crecimiento y éxito continuo."
-        </article>
-        <article class="item item-5">
-          <img src="/resources/img/consultor3.jfif" alt="cons3" />
-          <p>Daniela Rivera.</p>
-        </article>
-        <article class="item item-6">
-          "Colaborar con SIMPLE SOLUTION CONSULTING ha sido una decisión crucial
-          para nuestra empresa de reparación de equipos médicos. Desde el
-          principio, su equipo se interesó por entender las particularidades de
-          nuestro negocio y nos ofreció soluciones personalizadas que han
-          transformado nuestras operaciones. Implementaron un sistema de gestión
-          que ha mejorado nuestra eficiencia en un 25%, permitiéndonos responder
-          más rápidamente a las necesidades de nuestros clientes. Además, la
-          capacitación proporcionada a nuestro personal ha elevado
-          significativamente nuestro nivel técnico y de servicio al cliente.
-          Gracias a su experiencia, hemos fortalecido nuestra reputación en el
-          sector y estamos mejor preparados para enfrentar los retos del
-          futuro."
-        </article>
-        <article class="item item-7">
-          <img src="/resources/img/consultor4.jfif" alt="cons4" />
-          <p>Brandon Lopez.</p>
-        </article>
-        <article class="item item-8">
-          "Colaborar con SIMPLE SOLUTION CONSULTING ha sido una decisión crucial
-          para nuestra empresa de reparación de equipos médicos. Desde el
-          principio, su equipo se interesó por entender las particularidades de
-          nuestro negocio y nos ofreció soluciones personalizadas que han
-          transformado nuestras operaciones. Implementaron un sistema de gestión
-          que ha mejorado nuestra eficiencia en un 25%, permitiéndonos responder
-          más rápidamente a las necesidades de nuestros clientes. Además, la
-          capacitación proporcionada a nuestro personal ha elevado
-          significativamente nuestro nivel técnico y de servicio al cliente.
-          Gracias a su experiencia, hemos fortalecido nuestra reputación en el
-          sector y estamos mejor preparados para enfrentar los retos del
-          futuro."
-        </article>
-      </section>
+      <section class="containerGrid"></section>
       <div class="containerFlex">
         <div class="itemFlex item-1">
           <h2 id="formulario">Dirección</h2>
@@ -207,8 +90,9 @@
       </div>
     </main>
     <footer class="animacion">
-      <p class="pie">Entrega Proyecto V.1 2024</p>
-      <a href="#inicio" class="top">inicio</a>
+      <!-- <a href="#inicio" class="pie">Ir al carrito de compras</a> -->
+      <button type="button" onclick="gotoModal()">Ir al carrito</button>
+      <!-- <a href="#inicio" class="top">inicio</a> -->
       <ul class="redessociales">
         <li>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
@@ -221,5 +105,32 @@
         </li>
       </ul>
     </footer>
+    <script>
+      cargadatos();
+    </script>
   </body>
 </html>
+<!-- 
+<dialog>
+  <button autofocus onclick="closeModal()">Close</button>
+  <section class="contenidoCarrito">
+    <h2>Carrito</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Cantidad</th>
+          <th>precio</th>
+        </tr>
+      </thead>
+      <tbody class="items">
+        <tr data-id="">
+          <td>Nombre</td>
+          <td>Cantidad</td>
+          <td>precio</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+</dialog>
+<button>Show the dialog</button> -->
